--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -53,13 +53,21 @@
     "    \n",
     "• calculer une distance thématique/préférence, voir le pouvoir prédictif de cette distance\n",
     "\n",
-    "est-ce qu'on peut le faire en anglais\n",
+    "\n",
+    "première étape pour les mots: créer une boucle, 1 ligne numero du député, une autre avec toutes ses interventions à la suite (sans traitement) \n",
+    "filtrer pour les séances en hémicycle uniquement\n",
+    "\n",
+    "à partir de ça voir les mots qui sortent le plus souvent pour chacun des députés\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     " \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +198,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
