--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -229,6 +229,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La première chose à faire est de récupérer un fichier contenant toutes les interventions de tous les députés. On importe le fichier <TT>words_mps.txt</TT> qui contient l'ensemble des interventions en hémicycle de l'ensemble des députés de la XIVème législature. Plus précisément, la colonne 0 correspond à l'id du député dans notre base de données (qui nous sera utile plus tard pour retrouver la présence des députés en commission ainsi que leur groupe parlementaire). La colonne 1 est la concaténation brute de toutes ses interventions que l'on va ensuite nettoyer pour extraire les centres d'intérêts de chacun des députés.\n",
+    "\n",
+    "Nous utilisons un script autonome pour extraire les données à partir d'une base SQL (cf. annexes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>('&lt;p&gt;Bla-bla-bla !&lt;/p&gt;',)(\"&lt;p&gt;Vous n'avez enco...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>(\"&lt;p&gt;Ce n'est pas fini !&lt;/p&gt;\",)('&lt;p&gt;Lamentable...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>(\"&lt;p&gt;J'ai bien entendu la position du Gouverne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>(\"&lt;p&gt;C'est vous qui le faites !&lt;/p&gt;\",)(\"&lt;p&gt;Mon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>(\"&lt;p&gt;Monsieur le président, monsieur le minist...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0                                                  1\n",
+       "0  1  ('<p>Bla-bla-bla !</p>',)(\"<p>Vous n'avez enco...\n",
+       "1  2  (\"<p>Ce n'est pas fini !</p>\",)('<p>Lamentable...\n",
+       "2  3  (\"<p>J'ai bien entendu la position du Gouverne...\n",
+       "3  4  (\"<p>C'est vous qui le faites !</p>\",)(\"<p>Mon...\n",
+       "4  5  (\"<p>Monsieur le président, monsieur le minist..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "#Attention à indiquer l'emplacement local du fichier words_mps.txt (accessible en local uniquement)\n",
+    "\n",
+    "df=pandas.read_csv('/Users/Gabriel/Desktop/words_mps.txt', sep='\\t',header=None)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Attribuer une thématique aux séances en commission"
    ]
   },
