--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -321,6 +321,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Etapes suivantes \n",
+    "\n",
+    "• nettoyer le fichier pour ne garder que les mots clefs\n",
+    "• trouver un moyen de regrouper les mots clef par champ lexical et mettre des catégories dessus (apprentissage non supervisé ?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Attribuer une thématique aux séances en commission"
    ]
   },
