--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -338,6 +338,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Rebelotte mais pour les séances en commission, très similaire aux députés (cf. script autonome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "#Attention à indiquer l'emplacement local du fichier words_meetings.txt (accessible en local uniquement)\n",
+    "\n",
+    "df=pandas.read_csv('/Users/Gabriel/Desktop/words_meetings.txt', sep='\\t',header=None)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Voir comment la proximité thématique prédit la participation"
    ]
   },
