--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -343,9 +343,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>(\"&lt;p&gt;Commission du développement durable et de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>(\"&lt;p&gt;COMMISSION DES AFFAIRES CULTURELLES ET DE...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>(\"&lt;p&gt;La Commission des affaires économiques s'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>(\"&lt;p&gt;La Commission a procédé, sous la présiden...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>(\"&lt;p&gt;COMMISSION DES AFFAIRES SOCIALES&lt;/p&gt;&lt;p&gt;Je...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0                                                  1\n",
+       "0  3  (\"<p>Commission du développement durable et de...\n",
+       "1  4  (\"<p>COMMISSION DES AFFAIRES CULTURELLES ET DE...\n",
+       "2  5  (\"<p>La Commission des affaires économiques s'...\n",
+       "3  6  (\"<p>La Commission a procédé, sous la présiden...\n",
+       "4  7  (\"<p>COMMISSION DES AFFAIRES SOCIALES</p><p>Je..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "\n",
