--- a/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
+++ b/Does the preference profile of a MP predicts his attendance to committee meetings ?.ipynb
@@ -358,7 +358,7 @@
     "    z = z.replace(\"!\",'')\n",
     "    z = z.replace(\".\",' ')\n",
     "    df2[i,1] = z\n",
-    "#print(df2)"
+    "print(df2)"
    ]
   },
   {
@@ -371,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -7222,7 +7224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
