--- a/Essai K-means simple.ipynb
+++ b/Essai K-means simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -11,17 +11,28 @@
      "text": [
       "Top terms per cluster:\n",
       "Cluster 0:\n",
-      " google\n",
-      " translate\n",
-      " app\n",
+      " eating\n",
+      " kitty\n",
+      " little\n",
+      " came\n",
+      " restaurant\n",
+      " play\n",
+      " ve\n",
       " feedback\n",
-      " impressed\n",
-      " map\n",
-      " incredible\n",
+      " face\n",
       " extension\n",
-      " promoter\n",
-      " chrome\n",
       "Cluster 1:\n",
+      " google\n",
+      " feedback\n",
+      " map\n",
+      " app\n",
+      " impressed\n",
+      " incredible\n",
+      " translate\n",
+      " key\n",
+      " extension\n",
+      " chrome\n",
+      "Cluster 2:\n",
       " cat\n",
       " best\n",
       " climbing\n",
@@ -35,8 +46,8 @@
       "\n",
       "\n",
       "Prediction\n",
-      "[0]\n",
       "[1]\n",
+      "[2]\n",
       "['au', 'aux', 'avec', 'ce', 'ces', 'dans', 'de', 'des', 'du', 'elle', 'en', 'et', 'eux', 'il', 'je', 'la', 'le', 'leur', 'lui', 'ma', 'mais', 'me', 'même', 'mes', 'moi', 'mon', 'ne', 'nos', 'notre', 'nous', 'on', 'ou', 'par', 'pas', 'pour', 'qu', 'que', 'qui', 'sa', 'se', 'ses', 'son', 'sur', 'ta', 'te', 'tes', 'toi', 'ton', 'tu', 'un', 'une', 'vos', 'votre', 'vous', 'c', 'd', 'j', 'l', 'à', 'm', 'n', 's', 't', 'y', 'été', 'étée', 'étées', 'étés', 'étant', 'étante', 'étants', 'étantes', 'suis', 'es', 'est', 'sommes', 'êtes', 'sont', 'serai', 'seras', 'sera', 'serons', 'serez', 'seront', 'serais', 'serait', 'serions', 'seriez', 'seraient', 'étais', 'était', 'étions', 'étiez', 'étaient', 'fus', 'fut', 'fûmes', 'fûtes', 'furent', 'sois', 'soit', 'soyons', 'soyez', 'soient', 'fusse', 'fusses', 'fût', 'fussions', 'fussiez', 'fussent', 'ayant', 'ayante', 'ayantes', 'ayants', 'eu', 'eue', 'eues', 'eus', 'ai', 'as', 'avons', 'avez', 'ont', 'aurai', 'auras', 'aura', 'aurons', 'aurez', 'auront', 'aurais', 'aurait', 'aurions', 'auriez', 'auraient', 'avais', 'avait', 'avions', 'aviez', 'avaient', 'eut', 'eûmes', 'eûtes', 'eurent', 'aie', 'aies', 'ait', 'ayons', 'ayez', 'aient', 'eusse', 'eusses', 'eût', 'eussions', 'eussiez', 'eussent']\n",
       "<class 'list'>\n"
      ]
@@ -64,9 +75,11 @@
     "X = vectorizer.fit_transform(documents)\n",
     "\n",
     "#NOMBRE DE CLUSTERS: arbitraire au début\n",
-    "true_k = 2\n",
+    "true_k = 3\n",
     "model = KMeans(n_clusters=true_k, init='k-means++', max_iter=100, n_init=1)\n",
     "model.fit(X)\n",
+    "labels = model.labels_\n",
+    "centroids = model.cluster_centers_\n",
     "\n",
     "print(\"Top terms per cluster:\")\n",
     "order_centroids = model.cluster_centers_.argsort()[:, ::-1]\n",
@@ -91,13 +104,149 @@
     "\n",
     "stop_words = stopwords.words('french')\n",
     "print(stop_words)\n",
-    "print(type(stop_words))\n",
-    " "
+    "print(type(stop_words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'algorithm': 'auto',\n",
+       " 'copy_x': True,\n",
+       " 'init': 'k-means++',\n",
+       " 'max_iter': 100,\n",
+       " 'n_clusters': 2,\n",
+       " 'n_init': 1,\n",
+       " 'n_jobs': None,\n",
+       " 'precompute_distances': 'auto',\n",
+       " 'random_state': None,\n",
+       " 'tol': 0.0001,\n",
+       " 'verbose': 0}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.cluster import k_means\n",
+    "from scipy.spatial import distance\n",
+    "\n",
+    "# nc is number of clusters\n",
+    "# to be implemented without the use of any libraries (from the scratch)\n",
+    "\n",
+    "def compute_s(i, x, labels, clusters):\n",
+    "    norm_c= len(clusters)\n",
+    "    s = 0\n",
+    "    for x in clusters:\n",
+    "        # print x\n",
+    "        s += distance.euclidean(x, clusters[i])\n",
+    "    return s\n",
+    "\n",
+    "def compute_Rij(i, j, x, labels, clusters, nc):\n",
+    "    Rij = 0\n",
+    "    try:\n",
+    "        # print \"h\"\n",
+    "        d = distance.euclidean(clusters[i],clusters[j])\n",
+    "        # print d\n",
+    "        Rij = (compute_s(i, x, labels, clusters) + compute_s(j, x, labels, clusters))/d\n",
+    "        # print Rij\n",
+    "    except:\n",
+    "        Rij = 0\t\n",
+    "    return Rij\n",
+    "\n",
+    "def compute_R(i, x, labels, clusters, nc): \n",
+    "    list_r = []\n",
+    "    for i in range(nc):\n",
+    "        for j in range(nc):\n",
+    "            if(i!=j):\n",
+    "                temp = compute_Rij(i, j, x, labels, clusters, nc)\n",
+    "                list_r.append(temp)\n",
+    "\n",
+    "    return max(list_r)\n",
+    "\n",
+    "def compute_DB_index(x, labels, clusters, nc):\n",
+    "    # print x\n",
+    "    sigma_R = 0.0\n",
+    "    for i in range(nc):\n",
+    "        sigma_R = sigma_R + compute_R(i, x, labels, clusters, nc)\n",
+    "\n",
+    "    DB_index = float(sigma_R)/float(nc)\n",
+    "    return DB_index\n",
+    "\n",
+    "#def main():\n",
+    "#    df = pd.read_csv(\"dataset.csv\")\n",
+    "#    df = df.dropna()\n",
+    "    # print df\n",
+    "    #x1 = df.copy()\n",
+    "    #del x1['Customer']\n",
+    "    #del x1['Effective To Date']\n",
+    "    #x4 = pd.get_dummies(x1)\n",
+    "    # print x4\n",
+    "    #n = 10\n",
+    "    #clf = k_means(x4, n_clusters = n)\n",
+    "    #centroids = clf[0] \n",
+    "    # 10 clusters\n",
+    "    #labels = clf[1] \n",
+    "    #print x4[1]\n",
+    "    #index_db_val = compute_DB_index(x4, labels, centroids, n)\n",
+    "    #print \"The value of Davies Bouldin index for a K-Means cluser of size \" + str(n) + \" is: \" + str(index_db_val)\n",
+    "\n",
+    "\n",
+    "#if __name__ == \"__main__\":\n",
+    "#    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4702566742983505\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/cluster/unsupervised.py:342: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  score = (intra_dists[:, None] + intra_dists) / centroid_distances\n",
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/cluster/unsupervised.py:342: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  score = (intra_dists[:, None] + intra_dists) / centroid_distances\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import davies_bouldin_score\n",
+    "Y = X.toarray()\n",
+    "index_db_val2 = davies_bouldin_score(Y, labels)\n",
+    "print(index_db_val2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
