--- a/[LOCAL]Does the preference profile of a MP predicts his attendance to committee meetings ?(2).ipynb
+++ b/[LOCAL]Does the preference profile of a MP predicts his attendance to committee meetings ?(2).ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -799,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
